@@ -57,6 +57,7 @@ Version 0.5
 - added :attr:`CommonResponseDescriptorsMixin.mimetype_params`
 - added :mod:`werkzeug.contrib.lint`
 - added `passthrough_errors` to `run_simple`.
+- added `secure_filename`
 
 Version 0.4.1
 -------------
